<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="625dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".event_select">

    <Button
        android:id="@+id/event_select_study"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/tab1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/event_select_assignment"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/tab2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_select_study" />

    <Button
        android:id="@+id/event_select_exam"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/tab3"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_select_assignment" />

    <Button
        android:id="@+id/event_select_lecture"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:text="@string/tab4"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_select_exam"
        app:layout_constraintVertical_bias="0.715" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>