<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:layout_editor_absoluteX="1dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="628dp">

    <TextView
        android:id="@+id/titleMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Month"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:textColor="#4C05EB"
        android:layout_marginEnd="8dp"
        />

    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        android:id="@+id/compactcalendar_view"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/calender_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:compactCalendarBackgroundColor="#FFF"
        app:compactCalendarCurrentDayBackgroundColor="#4CA9FB"
        app:compactCalendarCurrentSelectedDayBackgroundColor="#80A6A6F1"
        app:compactCalendarMultiEventIndicatorColor="#fff"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextColor="#000000"
        app:compactCalendarTextSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/table_background"
        android:layout_marginTop="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

        <TableRow
            android:background="@color/purple_500">
            <TextView
                android:id="@+id/todayDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="title"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </TableRow>
        <TableRow
            android:background="@color/white">
            <TextView
                android:textSize="18sp"
                android:text="@string/tab1"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
            <TextView
                android:id="@+id/studyCount"
                android:textSize="18sp"
                android:text="@string/default_0"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />
        </TableRow>
        <TableRow
            android:background="@color/white">
            <TextView
                android:textSize="18sp"
                android:text="@string/tab2"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
            <TextView
                android:id="@+id/assignmentCount"
                android:textSize="18sp"
                android:text="@string/default_0"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />
        </TableRow>
        <TableRow
            android:background="@color/white">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tab3"
                android:layout_weight="4"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/examCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_0"
                android:layout_weight="4"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:padding="10dp"/>
        </TableRow>
        <TableRow
            android:background="@color/white">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tab4"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/lectureCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_0"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
    </TableLayout>



</androidx.appcompat.widget.LinearLayoutCompat>